# Halite-III-Bot

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  MyBot  MyBot.cpp  MyBotProfile  MyBotTmp  README.md  ReferenceBot  ReferenceBot.cpp  build_pkg.sh  compare_against_reference.sh  evolution.py  halite  install.sh  installOnHost.sh  installtmp.sh  output-2-32  output-2-48  output-2-56  output-2-64  output-4-32  output-4-48  output-4-56  output-4-64  readJson.py
hlt/: command.cpp  constants.cpp  direction.hpp  entity.hpp  game.cpp  game.hpp  game_map.cpp  game_map.hpp  genes.cpp  genes.hpp  input.hpp  map_cell.hpp  player.cpp  position.hpp  types.hpp
hltref/: command.hpp  constants.cpp  constants.hpp  direction.hpp  dropoff.cpp  dropoff.hpp  game.cpp  game_map.cpp  game_map.hpp  genes.cpp  genes.hpp  log.cpp  log.hpp  map_cell.hpp  player.cpp  player.hpp  ship.cpp  ship.hpp  shipyard.hpp
starter_kits/C++/: .gitignore  CMakeLists.txt  MyBot.cpp  MyBot.cpps  ReferenceBot.cpp  compare_against_reference.sh  evolution.py  install.sh  run_game.sh
starter_kits/C++/hlt/: constants.hpp  game.cpp  game_map.hpp  genes.cpp  genes.hpp  map_cell.hpp  position.hpp
starter_kits/Python3/: .gitignore  MyBot.py  evolution.py
starter_kits/Python3/hlt/: constants.py  entity.py  game_map.py  positionals.py
